fixes about-me content align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,6 +235,7 @@ section#about-me .hl{
 }
 
 section#about-me p{
+	text-align: justify; 
 	font-size: 1.3em;
 	font-weight: 100;
 }
